--- a/MandelBrot/MandelBrot.csproj
+++ b/MandelBrot/MandelBrot.csproj
@@ -46,18 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="MandelbrotVisualizer.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MandelbrotVisualizer.Designer.cs">
+      <DependentUpon>MandelbrotVisualizer.cs</DependentUpon>
     </Compile>
     <Compile Include="LockBitmap.cs" />
     <Compile Include="MandelbrotSet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="MandelbrotVisualizer.resx">
+      <DependentUpon>MandelbrotVisualizer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
