--- a/MandelBrot/MandelBrot.csproj
+++ b/MandelBrot/MandelBrot.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Window.cs" />
     <Compile Include="MandelbrotVisualizer.cs">
       <SubType>Form</SubType>
     </Compile>
