Added ImageDrawnArgs event args and drawing strategies

--- a/MandelBrot/MandelBrot.csproj
+++ b/MandelBrot/MandelBrot.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DrawStrategy.cs" />
+    <Compile Include="ImageDrawnArgs.cs" />
     <Compile Include="Window.cs" />
     <Compile Include="MandelbrotVisualizer.cs">
       <SubType>Form</SubType>
